# camera-fusion

./: .coveragerc  .gitattributes  .gitignore  LICENSE  Makefile  README.md  TODO.md  requirements.txt  setup.cfg  setup.py  tox.ini
camera_fusion/: Camera.py  CameraCorrected.py  CamerasFusion.py  __init__.py
tests/: test_Camera.py  test_CameraCorrected.py  test_CamerasFusion.py
tests/reports/coverage-html/: camera_fusion_CameraCorrected_py.html  camera_fusion_Camera_py.html  camera_fusion_CamerasFusion_py.html  camera_fusion___init___py.html  index.html  status.json
tests/test_Camera/: cameraParameters_0.xml  correct_board_and_markers_posture_frame.npy  correct_board_posture_frame.npy  correct_markers_posture_frame.npy  defaultConfig_assert.xml  real_captured_frame.npy  real_captured_frame_with_30fps.npy  real_undistored_frame.npy
tests/test_CameraCorrected/: defaultConfig.xml  real_captured_frame_withText.npy
