[metadata]
description-file = README.md

[tool:pytest]
addopts = ./tests/ --doctest-modules --mccabe --cov=./camera_fusion --cov-config .coveragerc --cov-append --cov-report html:tests/reports/coverage-html --pep8 --ignore=docs/
doctest_encoding = utf-8
mccabe-complexity =
    camera_calibration.py 12
    cameras_fusion.py 15
    *.py 7

[pydocstyle]
ignore = D203, D213, D406, D407
match_dir = camera_fusion
